# iroha2_setup

./: Dockerfile  README.md  account_register2.sh  account_register_madhatter.sh  account_register_whiterabbit.sh  asset_transfer.sh  config_alice.json  config_gryphon.json  config_madhatter.json  deserialize.py  docker-compose.pre-rc19.yml  erro_log  error_log  error_log.md  git_push.sh  iroha_python_setup.sh  mint_asset_doorknob.sh  prometheus.yml  register_domain.py  rust_update.sh  setup.sh  setup_iroha2_new_commit.sh  setup_iroha_cli.sh  setup_irona_python.sh  success_log  visualize_outputs.py
actions_scripts/: README.md  account_register_whiterabbit.sh  asset_register_doorknob.sh  burn_assets.sh  register_account_ringo.sh  test.py
actions_scripts/demo/: account_register_dina.sh  account_register_eduardo.sh  config_eduardo.json  keys_dina.txt  mint_asset_gca.sh  register_new_asset._gca.sh  transfer_asset_gca.sh
prometheus/: README.md  prometheus.yml  prometheus_setup.sh
python_scripts/: README.md  complete_demo.py  config.json  function_queryByAssetId.py  import pkgutil.py  iroha2_app.py  list_account.sh  query_FindAssetById.sh  register_account.py  testing_queries.py  visualize_outputs.py
samples_config_json/: README.md  config_gryphon.json  config_madhatter.json
setup/: Dockerfile  README.md  iroha_cl_setup.sh  iroha_python_setup.sh  peers_setup.sh
smart_contracts/: Cargo.toml  README.md  lib.rs
